# strack

./: .gitignore  Cargo.toml  README.md  style.css
src/: main.rs
src/slack_integration/: connection.rs
src/ui/: chat_view.rs  main_window.rs  mod.rs
