[package]
name = "strack"
version = "0.0.1"
authors = ["Will Fuqua <wafuqua@gmail.com>"]

[dependencies]
config = "0.8.0"
failure = "0.1.1"
slack = "0.19.0"
slack_api = "0.18.0"
relm = "^0.14.0"
relm-derive = "^0.14.0"
relm-attributes = "^0.14.0"
gio = "0.4.0"
gdk = "0.8.0"

[dependencies.gtk]
version = "0.4.0"
features = ["v3_16"]

[features]
default = ["relm/unstable", "relm-attributes/unstable", "relm-derive/unstable"]
